fdo#42470: Do not show backing window on --nodefault

Change-Id: Id265dc84de454568ea8194703687c68449e9a32b